--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
+*.exe binary
 * text eol=crlf
 
 ###############################################################################
